# music-reactive-luminous-clothing

./: LICENSE  README.md
app/: Bluetooth_Electronics_Panels.kwl
firmware/: BluetoothElectronics.cpp  ELSequencer.cpp  ELSequencer.h  LoudnessMeter.cpp  LoudnessMeter.h  LoudnessMeterI2S.cpp  LoudnessMeterI2S.h  ModeRegistry.cpp  ModeRegistry.h  Modes.h  PushButtons.cpp  PushButtons.h  firmware.ino
simulator/: .gitignore  README.md  pyproject.toml
simulator/src/vibelight/: audio.py  auto_pipeline.py  constants.py  esp32-sim.py  firmware.py  mappers.py  renderer.py  sampling.py
